[FEAT] 근무자 카드 > 전체 및 월별 데이터 조회 api 연결 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -125,7 +125,9 @@
         <activity android:name=".src.login.RePWActivity"/>
         <activity android:name=".src.mypage.common.setting.editinfo.ManageMyInfoActivity"/>
 
-        <activity android:name=".src.mypage.manager.workerlist.cardevent.detailinfo.DetailLateCheckActivity"/>
+        <activity android:name=".src.mypage.manager.workerlist.cardevent.detailinfo.commute.DetailLateCheckActivity"/>
+        <activity android:name=".src.mypage.manager.workerlist.cardevent.detailinfo.taskinfo.DetailDoneWorkActivity"/>
+        <activity android:name=".src.mypage.manager.workerlist.cardevent.detailinfo.taskinfo.DetailSelectMonthListActivity"/>
 
     </application>
 
