[FEAT] 근무자 카드 > 전체 및 일별 데이터 조회 api 연결 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,6 +128,7 @@
         <activity android:name=".src.mypage.manager.workerlist.cardevent.detailinfo.commute.DetailLateCheckActivity"/>
         <activity android:name=".src.mypage.manager.workerlist.cardevent.detailinfo.taskinfo.DetailDoneWorkActivity"/>
         <activity android:name=".src.mypage.manager.workerlist.cardevent.detailinfo.taskinfo.DetailSelectMonthListActivity"/>
+        <activity android:name=".src.mypage.manager.workerlist.cardevent.detailinfo.taskinfo.DetailSelectDayListActivity"/>
 
     </application>
 
