[FEAT] 매장 삭제 API 엮기 (but 토큰 유효성 문제 발생)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -136,6 +136,8 @@
         <activity android:name=".src.home.manager.editshop.ui.EditShopInfoOneActivity"/>
         <activity android:name=".src.home.manager.editshop.ui.EditShopInfoTwoActivity"/>
 
+        <activity android:name=".src.home.manager.editshop.ui.DelShopActivity"/>
+
     </application>
 
 
