--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
         <activity android:name=".src.register.manager.RegisterPlaceActivity" >
 
         </activity>
-        <activity android:name=".src.home.common.HomeActivity" />
+        <activity android:name=".src.home.common.ui.HomeActivity" />
         <activity android:name=".src.login.LoginActivity" />
         <activity android:name=".src.register.common.RegisterActivity" />
         <activity android:name=".src.splash.SplashActivity">
@@ -65,7 +65,7 @@
         <activity android:name=".src.register.manager.InputBNumActivity" />
         <activity android:name=".src.register.worker.ui.RegisterJoinActivity" />
         <activity android:name=".src.register.worker.ui.WorkerOnBoardingActivity" />
-        <activity android:name=".src.home.common.SettingActivity" />
+        <activity android:name=".src.home.common.ui.SettingActivity" />
 
 
         <activity android:name=".src.mypage.worker.myInfo.ui.LateCheckActivity">
@@ -103,7 +103,7 @@
         <activity android:name=".src.mypage.common.setting.WMyPageSettingActivity"/>
 
         <activity android:name=".src.home.manager.opened.ui.QRShowingActivity"/>
-        <activity android:name=".src.home.common.HomeAlarmActivity"/>
+        <activity android:name=".src.home.common.ui.HomeAlarmActivity"/>
         <activity android:name=".src.home.manager.opened.ui.TodaysWorkerListActivity"/>
 
         <activity android:name=".src.home.manager.worklist.ui.HomeMTodayToDoListActivity">
@@ -117,7 +117,7 @@
             android:screenOrientation="portrait"
             tools:replace="screenOrientation"/>
 
-        <activity android:name=".src.home.common.HomeShopListActivity"/>
+        <activity android:name=".src.home.common.ui.HomeShopListActivity"/>
 
         <activity android:name=".src.home.worker.opened.worklist.ui.HomeWTodayToDoListActivity"/>
         <activity android:name=".src.withdraw.ui.DefaultWithDrawActivity"/>
