[FEAT] 홈화면 > 개인 > 포지션별 업무조회 API 연결 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -137,6 +137,7 @@
         <activity android:name=".src.home.manager.editshop.ui.EditShopInfoTwoActivity"/>
 
         <activity android:name=".src.home.manager.editshop.ui.DelShopActivity"/>
+        <activity android:name=".src.home.manager.worklist.ui.HomePersonalPositionActivity"/>
 
     </application>
 
