[FEAT] 관리자 공동업무 추가 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -139,6 +139,8 @@
         <activity android:name=".src.home.manager.editshop.ui.DelShopActivity"/>
         <activity android:name=".src.home.manager.worklist.ui.HomePersonalPositionActivity"/>
 
+        <activity android:name=".src.home.manager.worklist.ui.AddTogetherWorkListActivity"/>
+
     </application>
 
 
