[FEAT] 완료한 공동업무 리스트 조회 가능

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -140,6 +140,7 @@
         <activity android:name=".src.home.manager.worklist.ui.HomePersonalPositionActivity"/>
 
         <activity android:name=".src.home.manager.worklist.ui.AddTogetherWorkListActivity"/>
+        <activity android:name=".src.mypage.manager.workerlist.cardevent.detailinfo.cotask.DetailTogetherWorkActivity"/>
 
     </application>
 
