--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
         android:name=".config.ApplicationClass"
         android:allowBackup="true"
         android:exported="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_albazip_launcher"
+        android:roundIcon="@mipmap/ic_albazip_launcher_round"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:hardwareAccelerated="true"
