[FEAT] 공지사항 확인 API 연결 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -142,6 +142,7 @@
         <activity android:name=".src.home.manager.worklist.ui.AddTogetherWorkListActivity"/>
         <activity android:name=".src.mypage.manager.workerlist.cardevent.detailinfo.cotask.DetailTogetherWorkActivity"/>
         <activity android:name=".src.community.common.ui.NoticeContentActivity"/>
+        <activity android:name=".src.community.worker.ui.NoticeWContentActivity"/>
 
     </application>
 
