--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -143,6 +143,9 @@
         <activity android:name=".src.mypage.manager.workerlist.cardevent.detailinfo.cotask.DetailTogetherWorkActivity"/>
         <activity android:name=".src.community.common.ui.NoticeContentActivity"/>
         <activity android:name=".src.community.worker.ui.NoticeWContentActivity"/>
+        <activity android:name=".src.community.manager.ui.WriteNoticeActivity"
+            android:windowSoftInputMode="adjustPan"
+            />
 
     </application>
 
