[FIX] 공지사항 이미지 자세히보기

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -146,6 +146,7 @@
         <activity android:name="com.playground.albazip.src.community.manager.ui.WriteNoticeActivity"
             android:windowSoftInputMode="adjustPan"
             />
+        <activity android:name=".src.community.common.ui.PhotoListActivity"/>
 
     </application>
 
