[FEAT] 공지사항 읽은 사람 명수 조회

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -147,6 +147,7 @@
             android:windowSoftInputMode="adjustPan"
             />
         <activity android:name=".src.community.common.ui.PhotoListActivity"/>
+        <activity android:name=".src.community.manager.ui.EditNoticeActivity"/>
 
     </application>
 
