--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
 
     <application
         android:name="com.playground.albazip.config.ApplicationClass"
+        android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
         android:exported="false"
         android:icon="@mipmap/ic_albazip_launcher"
