[FEAT] 공지사항 검색기능 추가(관리자 버전)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -145,10 +145,14 @@
         <activity android:name="com.playground.albazip.src.community.common.ui.NoticeContentActivity"/>
         <activity android:name="com.playground.albazip.src.community.worker.ui.NoticeWContentActivity"/>
         <activity android:name="com.playground.albazip.src.community.manager.ui.WriteNoticeActivity"
-            android:windowSoftInputMode="adjustPan"
-            />
+            android:windowSoftInputMode="adjustPan" />
         <activity android:name=".src.community.common.ui.PhotoListActivity"/>
         <activity android:name=".src.community.manager.ui.EditNoticeActivity"/>
+        <activity android:name=".src.community.manager.ui.SearchCoMActivity"
+            android:windowSoftInputMode="adjustNothing"/>
+        <activity android:name=".src.community.worker.ui.SearchCoWActivity"
+            android:windowSoftInputMode="adjustNothing"
+            />
 
     </application>
 
