[FIX] 관리자 매장 마감후 오늘의 할 일 수정 불가능 하게 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -154,6 +154,8 @@
             android:windowSoftInputMode="adjustNothing"
             />
 
+        <activity android:name=".src.home.manager.closed.worklist.ui.HomeMClosedToDoListActivity"/>
+
     </application>
 
 
