[FIX] 근무자 퇴근후 오늘의 할 일 수정 불가능 하게 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -155,6 +155,7 @@
             />
 
         <activity android:name=".src.home.manager.closed.worklist.ui.HomeMClosedToDoListActivity"/>
+        <activity android:name=".src.home.worker.closed.worklist.ui.HomeWClosedToDoListActivity"/>
 
     </application>
 
