--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,13 +62,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
     // https://github.com/square/okhttp
-    implementation("com.squareup.okhttp3:okhttp:4.9.0")
+    implementation "com.squareup.okhttp3:okhttp:4.9.1"
 
     // https://github.com/square/retrofit/tree/master/retrofit-converters/gson
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     // https://github.com/square/okhttp/tree/master/okhttp-logging-interceptor
-    implementation("com.squareup.okhttp3:logging-interceptor:4.9.0")
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
 
     // firebase sms 인증
     implementation platform('com.google.firebase:firebase-bom:28.4.2')
