[feat] 영업시간 설정 UI 생성

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -159,7 +159,7 @@
 
 
 
-        <activity android:name=".src.register.manager.place.InputPlaceMoreBetaActivity"
+        <activity android:name=".src.register.manager.moreinfo.InputPlaceMoreBetaActivity"
             android:exported="true"/>
 
     </application>
