#15 [feat] 영업시간 리사이클러뷰 연결

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -162,6 +162,8 @@
         <activity android:name=".src.register.manager.moreinfo.InputPlaceMoreBetaActivity"
             android:exported="true"/>
 
+        <activity android:name=".src.register.manager.moreinfo.RunningTimeActivity"/>
+
     </application>
 
 
