[feat] 근무자 시간 설정 : 휴무일, 24시간 버튼 이벤트 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -169,7 +169,8 @@
             android:name=".src.register.manager.moreinfo.InputPlaceMoreBetaActivity"
             android:exported="true" />
 
-        <activity android:name=".src.register.manager.moreinfo.RunningTimeActivity" />
+        <activity android:name=".src.update.runtime.UpdateRunningTimeActivity"
+            android:exported="true"/>
 
         <activity
             android:name=".src.update.setworker.UpdateAddWorkerOneActivity"
