[feat] 근무자 시간 설정 : 뒤로가기 요일 이벤트 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -166,7 +166,7 @@
 
 
         <activity
-            android:name=".src.register.manager.moreinfo.InputPlaceMoreBetaActivity"
+            android:name=".src.update.runtime.InputPlaceMoreBetaActivity"
             android:exported="true" />
 
         <activity android:name=".src.update.runtime.UpdateRunningTimeActivity"
