--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
     package="com.playground.albazip">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -175,6 +176,7 @@
        <activity android:name=".src.update.setworker.UpdateAddWorkerOneActivity"
            android:exported="true"/>
         <activity android:name=".src.update.setworker.UpdateSetWorkerTimeActivity" />
+        <activity android:name=".src.splash.PermissionCheckActivity"/>
 
     </application>
 
