[QA] 홈 편집) 홈 편집 전 정보 조회

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -140,7 +140,8 @@
         <activity android:name="com.playground.albazip.src.mypage.manager.workerlist.editposition.ui.EditWorkerOneActivity" />
         <activity android:name="com.playground.albazip.src.mypage.manager.workerlist.editposition.ui.EditWorkerTwoActivity" />
 
-        <activity android:name="com.playground.albazip.src.home.manager.editshop.ui.EditShopInfoOneActivity" />
+        <activity android:name="com.playground.albazip.src.home.manager.editshop.ui.EditShopInfoOneActivity"
+            android:exported="true"/>
         <activity android:name="com.playground.albazip.src.home.manager.editshop.ui.EditShopInfoTwoActivity" />
 
         <activity android:name="com.playground.albazip.src.home.manager.editshop.ui.DelShopActivity" />
