--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         applicationId "com.playground.albazip"
         minSdkVersion 27
         targetSdkVersion 32
-        versionCode 7
+        versionCode 8
         versionName "1.0.6"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -51,6 +51,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    // ViewModel
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+
     // 로딩 다이얼로그
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 
@@ -62,13 +68,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
     // https://github.com/square/okhttp
-    implementation "com.squareup.okhttp3:okhttp:4.9.1"
+    implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
 
     // https://github.com/square/retrofit/tree/master/retrofit-converters/gson
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     // https://github.com/square/okhttp/tree/master/okhttp-logging-interceptor
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
+    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
 
     // firebase sms 인증
     implementation platform('com.google.firebase:firebase-bom:28.4.2')
@@ -76,8 +82,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
 
     // glide
-    implementation 'com.github.bumptech.glide:glide:4.13.2'
-    kapt 'com.github.bumptech.glide:compiler:4.13.2'
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    kapt 'com.github.bumptech.glide:compiler:4.14.2'
 
     // swipe refresh
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
@@ -87,7 +93,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
     // viewpager2 indicator
-    implementation 'com.tbuonomo:dotsindicator:4.2'
+    implementation 'com.tbuonomo:dotsindicator:4.3'
 
     // qr 코드 스캔
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
@@ -98,8 +104,9 @@ dependencies {
     // 모서리 둥근 이미지 뷰
     implementation 'com.github.siyamed:android-shape-imageview:0.9.3'
 
-    //
+    // firebase analytics
     implementation 'com.google.firebase:firebase-analytics-ktx'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
